--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -88,6 +88,7 @@
       }
    }
 }
+
 .header-content {
    min-height: 720px;
    &__inner {
@@ -121,7 +122,7 @@
       width: 266px;
       height: 66px;
       cursor: pointer;
-      align-items: center;      
+      align-items: center;
       img {
          align-items: center;
          margin-right: 15px;
@@ -257,14 +258,22 @@
    z-index: 3;
    .container {
       position: relative;
+      &::before {
+         content: "";
+         position: absolute;
+         width: 705px;
+         height: 12px;
+         background-color: $orange;
+         top: -12px;
+         right: 9px;
+      }
       &::after {
          content: "";
          position: absolute;
          width: 705px;
-         height: 811px;
-         border-top: 12px solid $orange;
-         border-bottom: 12px solid $orange;
-         top: -12px;
+         height: 12px;
+         background-color: $orange;
+         bottom: -12px;
          right: 9px;
       }
       &.free-quote__inner {
@@ -289,15 +298,6 @@
       line-height: 26px;
       color: #fff;
    }
-   // &__form {
-   //    width: 694px;
-   //    // background-color: $orange;
-   //    // min-height: 811px;
-   //    z-index: -1;
-   //    // position: absolute;
-   //    // top: -105px;
-   //    // right: 0;
-   // }
    &__inner {
       max-width: 700px;
       padding-top: 100px;
@@ -330,6 +330,7 @@
          padding: 18px;
          color: #fff;
          line-height: 30px;
+         border-color: #768090;
          &:nth-child(odd) {
             margin-right: 15px;
          }
@@ -338,7 +339,16 @@
             line-height: 30px;
          }
       }
-
+      textarea:focus {
+         border-radius: 26px;
+         border: 1px solid transparent;
+      }
+      button {
+         transition: all 0.3s ease;
+         &:hover {
+            transform: scale(1.1);
+         }
+      }
       .jq-selectbox__select {
          height: 50px;
          border: 1px solid #768090;
@@ -369,7 +379,6 @@
       }
       .jq-selectbox__dropdown {
          box-sizing: border-box;
-         width: 700px;
          margin: 2px 0 0;
          padding: 10px 18px;
          border: 1px solid #768090;
@@ -378,6 +387,19 @@
          box-shadow: none;
          font: 14px "ProximaNova-Bold", sans-serif;
          color: #fff;
+         top: 47px;
+         background-color: rgb(204, 204, 204);
+      }
+      .jq-selectbox li {
+         color: #fff;
+      }
+      .jq-selectbox li.selected {
+         background-color: transparent;
+      }
+      .jq-selectbox li:hover {
+         background-color: transparent;
+         color: #fff;
+         transform: scale(0.1);
       }
    }
    textarea {
@@ -409,6 +431,9 @@
          margin-right: 0px;
       }
    }
+}
+.jq-selectbox .jqselect {
+   display: none;
 }
 
 //end free-quote
@@ -467,32 +492,43 @@
       text-transform: uppercase;
    }
 }
-// .Line {
-//   border-width: 3px;
-//   border-color: rgb(255, 113, 1);
-//   border-style: solid;
-//   background-color: rgb(255, 228, 0);
-//   position: absolute;
-//   left: 0px;
-//   top: 2905px;
-//   width: 1914px;
-//   height: 0;
-//   z-index: 263;
-// }
-
 //end numbers
 //start timer
 .timer {
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
-   min-height: 720px;
    opacity: 0.9;
-   padding: 105px 0px 85px;
+   padding: 105px 0px 65px;
+   text-transform: uppercase;
+   text-align: center;
    &__title {
       color: #fff;
       line-height: 40px;
+      margin-bottom: 90px;
    }
+   &__link {
+      width: 345px;
+      height: 65px;
+      border: 1px solid #fff;
+      border-radius: 33px;
+      background-color: transparent;
+      @include p900;
+      color: #fff;
+      padding: 22px;
+      font-size: 20px;
+      margin: 0 auto;
+      margin-top: 65px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      &:hover {
+         transform: scale(1.1);
+      }
+   }
+}
+.clock {
+   margin: 0 auto;
+   max-width: 800px;
 }
 //end timer
 //start bonus
@@ -578,20 +614,27 @@
 //end bonus
 //start company
 .company {
-   min-height: 900px;
    padding: 75px 0 60px 0;
    background-repeat: no-repeat;
-   background-size: contain;
+   background-size: cover;
    .container {
       position: relative;
+      &::before {
+         content: "";
+         position: absolute;
+         width: 705px;
+         min-height: 20px;
+         background-color: $orange;
+         top: -95px;
+         left: 0px;
+      }
       &::after {
          content: "";
          position: absolute;
          width: 705px;
-         min-height: 934px;
-         border-top: 20px solid $orange;
-         border-bottom: 20px solid $orange;
-         bottom: -55px;
+         min-height: 20px;
+         background-color: $orange;
+         bottom: -80px;
          left: 0px;
       }
    }
@@ -623,7 +666,7 @@
    }
    &__bottom {
       display: flex;
-      padding: 20px 30px 40px;
+      padding: 20px 30px 30px;
       border: 1px solid $orange;
       img {
          border-radius: 50%;
@@ -677,7 +720,7 @@
          display: block;
       }
       &.active {
-         span {
+         .questions__box-info {
             @include m700;
          }
       }
@@ -934,4 +977,567 @@
    }
 }
 //end footer
+
+/* Get the bourbon mixin from http://bourbon.io */
+/* Reset */
+.flip-clock-wrapper * {
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   -ms-box-sizing: border-box;
+   -o-box-sizing: border-box;
+   box-sizing: border-box;
+   -webkit-backface-visibility: hidden;
+   -moz-backface-visibility: hidden;
+   -ms-backface-visibility: hidden;
+   -o-backface-visibility: hidden;
+   backface-visibility: hidden;
+}
+
+.flip-clock-wrapper a {
+   cursor: pointer;
+   text-decoration: none;
+   color: #ccc;
+}
+
+.flip-clock-wrapper a:hover {
+   color: #fff;
+}
+
+.flip-clock-wrapper ul {
+   list-style: none;
+}
+
+.flip-clock-wrapper.clearfix:before,
+.flip-clock-wrapper.clearfix:after {
+   content: " ";
+   display: table;
+}
+
+.flip-clock-wrapper.clearfix:after {
+   clear: both;
+}
+
+.flip-clock-wrapper.clearfix {
+   *zoom: 1;
+}
+
+/* Main */
+.flip-clock-wrapper {
+   font: normal 11px "Helvetica Neue", Helvetica, sans-serif;
+   -webkit-user-select: none;
+}
+
+.flip-clock-meridium {
+   background: none !important;
+   box-shadow: 0 0 0 !important;
+   font-size: 36px !important;
+}
+
+.flip-clock-meridium a {
+   color: #313333;
+}
+
+.flip-clock-wrapper {
+   text-align: center;
+   position: relative;
+   width: 100%;
+   margin: 0 auto;
+}
+
+.flip-clock-wrapper:before,
+.flip-clock-wrapper:after {
+   content: " "; /* 1 */
+   display: table; /* 2 */
+}
+.flip-clock-wrapper:after {
+   clear: both;
+}
+
+/* Skeleton */
+.flip-clock-wrapper ul {
+   position: relative;
+   float: left;
+   margin: 0px;
+   width: 75px;
+   height: 90px;
+   font-size: 80px;
+   font-weight: bold;
+   line-height: 87px;
+   border-radius: 0px;
+   background: #000;
+   margin-top: 30px;
+}
+.flip-clock-wrapper ul li {
+   z-index: 1;
+   position: absolute;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   line-height: 87px;
+   text-decoration: none !important;
+}
+
+.flip-clock-wrapper ul li:first-child {
+   z-index: 2;
+}
+
+.flip-clock-wrapper ul li a {
+   display: block;
+   height: 100%;
+   -webkit-perspective: 200px;
+   -moz-perspective: 200px;
+   perspective: 200px;
+   margin: 0 !important;
+   overflow: visible !important;
+   cursor: default !important;
+}
+
+.flip-clock-wrapper ul li a div {
+   z-index: 1;
+   position: absolute;
+   left: 0;
+   width: 100%;
+   height: 50%;
+   font-size: 80px;
+   overflow: hidden;
+   outline: 1px solid transparent;
+}
+
+.flip-clock-wrapper ul li a div .shadow {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   z-index: 2;
+}
+
+.flip-clock-wrapper ul li a div.up {
+   -webkit-transform-origin: 50% 100%;
+   -moz-transform-origin: 50% 100%;
+   -ms-transform-origin: 50% 100%;
+   -o-transform-origin: 50% 100%;
+   transform-origin: 50% 100%;
+   top: 0;
+}
+
+.flip-clock-wrapper ul li a div.up:after {
+   content: "";
+   position: absolute;
+   top: 44px;
+   left: 0;
+   z-index: 5;
+   width: 100%;
+   height: 3px;
+   background-color: #000;
+   background-color: rgba(0, 0, 0, 0.4);
+}
+
+.flip-clock-wrapper ul li a div.down {
+   -webkit-transform-origin: 50% 0;
+   -moz-transform-origin: 50% 0;
+   -ms-transform-origin: 50% 0;
+   -o-transform-origin: 50% 0;
+   transform-origin: 50% 0;
+   bottom: 0;
+   border-bottom-left-radius: 0px;
+   border-bottom-right-radius: 0px;
+}
+
+.flip-clock-wrapper ul li a div div.inn {
+   position: absolute;
+   left: 0;
+   z-index: 1;
+   width: 100%;
+   height: 200%;
+   color: #ccc;
+   text-shadow: 0 1px 2px #000;
+   text-align: center;
+   background-color: #19191a;
+   border-radius: 0px;
+   font-size: 80px;
+}
+
+.flip-clock-wrapper ul li a div.up div.inn {
+   top: 0;
+}
+
+.flip-clock-wrapper ul li a div.down div.inn {
+   bottom: 0;
+}
+
+/* PLAY */
+.flip-clock-wrapper ul.play li.flip-clock-before {
+   z-index: 3;
+}
+
+.flip-clock-wrapper .flip {
+   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
+}
+
+.flip-clock-wrapper ul.play li.flip-clock-active {
+   -webkit-animation: asd 0.5s 0.5s linear both;
+   -moz-animation: asd 0.5s 0.5s linear both;
+   animation: asd 0.5s 0.5s linear both;
+   z-index: 5;
+}
+
+.flip-clock-divider {
+   float: left;
+   display: block;
+   position: relative;
+   width: 50px;
+   height: 100px;
+   background-color: transparent;
+}
+
+.flip-clock-divider:first-child {
+   width: 0;
+}
+
+.flip-clock-dot {
+   display: none;
+   background: #323434;
+   width: 10px;
+   height: 10px;
+   position: absolute;
+   border-radius: 50%;
+   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+   left: 5px;
+}
+
+.flip-clock-divider .flip-clock-label {
+   position: absolute;
+   top: -1.5em;
+   right: -100px;
+   color: #fff;
+   text-shadow: none;
+}
+
+.flip-clock-label {
+   font-size: 16px;
+}
+.flip-clock-divider.minutes .flip-clock-label {
+   right: -108px;
+}
+
+.flip-clock-divider.seconds .flip-clock-label {
+   right: -113px;
+}
+
+.flip-clock-dot.top {
+   top: 30px;
+}
+
+.flip-clock-dot.bottom {
+   bottom: 30px;
+}
+
+@-webkit-keyframes asd {
+   0% {
+      z-index: 2;
+   }
+
+   20% {
+      z-index: 4;
+   }
+
+   100% {
+      z-index: 4;
+   }
+}
+
+@-moz-keyframes asd {
+   0% {
+      z-index: 2;
+   }
+
+   20% {
+      z-index: 4;
+   }
+
+   100% {
+      z-index: 4;
+   }
+}
+
+@-o-keyframes asd {
+   0% {
+      z-index: 2;
+   }
+
+   20% {
+      z-index: 4;
+   }
+
+   100% {
+      z-index: 4;
+   }
+}
+
+@keyframes asd {
+   0% {
+      z-index: 2;
+   }
+
+   20% {
+      z-index: 4;
+   }
+
+   100% {
+      z-index: 4;
+   }
+}
+
+.flip-clock-wrapper ul.play li.flip-clock-active .down {
+   z-index: 2;
+   -webkit-animation: turn 0.5s 0.5s linear both;
+   -moz-animation: turn 0.5s 0.5s linear both;
+   animation: turn 0.5s 0.5s linear both;
+}
+
+@-webkit-keyframes turn {
+   0% {
+      -webkit-transform: rotateX(90deg);
+   }
+
+   100% {
+      -webkit-transform: rotateX(0deg);
+   }
+}
+
+@-moz-keyframes turn {
+   0% {
+      -moz-transform: rotateX(90deg);
+   }
+
+   100% {
+      -moz-transform: rotateX(0deg);
+   }
+}
+
+@-o-keyframes turn {
+   0% {
+      -o-transform: rotateX(90deg);
+   }
+
+   100% {
+      -o-transform: rotateX(0deg);
+   }
+}
+
+@keyframes turn {
+   0% {
+      transform: rotateX(90deg);
+   }
+
+   100% {
+      transform: rotateX(0deg);
+   }
+}
+
+.flip-clock-wrapper ul.play li.flip-clock-before .up {
+   z-index: 2;
+   -webkit-animation: turn2 0.5s linear both;
+   -moz-animation: turn2 0.5s linear both;
+   animation: turn2 0.5s linear both;
+}
+
+@-webkit-keyframes turn2 {
+   0% {
+      -webkit-transform: rotateX(0deg);
+   }
+
+   100% {
+      -webkit-transform: rotateX(-90deg);
+   }
+}
+
+@-moz-keyframes turn2 {
+   0% {
+      -moz-transform: rotateX(0deg);
+   }
+
+   100% {
+      -moz-transform: rotateX(-90deg);
+   }
+}
+
+@-o-keyframes turn2 {
+   0% {
+      -o-transform: rotateX(0deg);
+   }
+
+   100% {
+      -o-transform: rotateX(-90deg);
+   }
+}
+
+@keyframes turn2 {
+   0% {
+      transform: rotateX(0deg);
+   }
+
+   100% {
+      transform: rotateX(-90deg);
+   }
+}
+
+.flip-clock-wrapper ul li.flip-clock-active {
+   z-index: 3;
+}
+
+/* SHADOW */
+.flip-clock-wrapper ul.play li.flip-clock-before .up .shadow {
+   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      color-stop(0%, rgba(0, 0, 0, 0.1)),
+      color-stop(100%, black)
+   );
+   background: linear, top, rgba(0, 0, 0, 0.1) 0%, black 100%;
+   background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: linear, to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%;
+   -webkit-animation: show 0.5s linear both;
+   -moz-animation: show 0.5s linear both;
+   animation: show 0.5s linear both;
+}
+
+.flip-clock-wrapper ul.play li.flip-clock-active .up .shadow {
+   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      color-stop(0%, rgba(0, 0, 0, 0.1)),
+      color-stop(100%, black)
+   );
+   background: linear, top, rgba(0, 0, 0, 0.1) 0%, black 100%;
+   background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: linear, to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%;
+   -webkit-animation: hide 0.5s 0.3s linear both;
+   -moz-animation: hide 0.5s 0.3s linear both;
+   animation: hide 0.5s 0.3s linear both;
+}
+
+/*DOWN*/
+.flip-clock-wrapper ul.play li.flip-clock-before .down .shadow {
+   background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      color-stop(0%, black),
+      color-stop(100%, rgba(0, 0, 0, 0.1))
+   );
+   background: linear, top, black 0%, rgba(0, 0, 0, 0.1) 100%;
+   background: -o-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: -ms-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: linear, to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%;
+   -webkit-animation: show 0.5s linear both;
+   -moz-animation: show 0.5s linear both;
+   animation: show 0.5s linear both;
+}
+
+.flip-clock-wrapper ul.play li.flip-clock-active .down .shadow {
+   background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      color-stop(0%, black),
+      color-stop(100%, rgba(0, 0, 0, 0.1))
+   );
+   background: linear, top, black 0%, rgba(0, 0, 0, 0.1) 100%;
+   background: -o-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: -ms-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: linear, to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%;
+   -webkit-animation: hide 0.5s 0.3s linear both;
+   -moz-animation: hide 0.5s 0.3s linear both;
+   animation: hide 0.5s 0.2s linear both;
+}
+
+@-webkit-keyframes show {
+   0% {
+      opacity: 0;
+   }
+
+   100% {
+      opacity: 1;
+   }
+}
+
+@-moz-keyframes show {
+   0% {
+      opacity: 0;
+   }
+
+   100% {
+      opacity: 1;
+   }
+}
+
+@-o-keyframes show {
+   0% {
+      opacity: 0;
+   }
+
+   100% {
+      opacity: 1;
+   }
+}
+
+@keyframes show {
+   0% {
+      opacity: 0;
+   }
+
+   100% {
+      opacity: 1;
+   }
+}
+
+@-webkit-keyframes hide {
+   0% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0;
+   }
+}
+
+@-moz-keyframes hide {
+   0% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0;
+   }
+}
+
+@-o-keyframes hide {
+   0% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0;
+   }
+}
+
+@keyframes hide {
+   0% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0;
+   }
+}
+
 @import "media";
