--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -16,6 +16,7 @@ body {
   font-family: "ProximaNova-Regular", sans-serif;
   font-size: 14px;
   font-weight: 400;
+  overflow-x: hidden;
 }
 .container {
   max-width: 1200px;
