--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -158,7 +158,7 @@
    &__form {
       margin-left: 280px;
    }
-   &__form-title {
+   &__title {
       font-family: "ProximaNova-Bold", sans-serif;
       font-weight: 800;
       font-size: 21px;
@@ -167,14 +167,14 @@
       line-height: 30px;
       margin-bottom: 5px;
    }
-   &__form-subtitle {
+   &__subtitle {
       font-family: "ProximaNova-Regular", sans-serif;
       color: #fff;
       text-transform: uppercase;
       line-height: 30px;
       margin-bottom: 50px;
    }
-   &__form-input {
+   input {
       height: 64px;
       width: 304px;
       background-color: transparent;
@@ -190,7 +190,7 @@
          padding: 20px;
       }
    }
-   &__form-btn {
+   button {
       width: 196px;
       height: 66px;
       color: #000;
@@ -239,10 +239,6 @@
    }
    &__item {
       text-align: center;
-      transition: all .3s;
-      &:hover{
-         transform: scale(1.1);
-      }
    }
    &__img {
       margin-bottom: 20px;
@@ -265,20 +261,20 @@
       &::before {
          content: "";
          position: absolute;
-         width: 700px;
+         width: 705px;
          height: 12px;
          background-color: $orange;
          top: -12px;
-         right: 14px;
+         right: 9px;
       }
       &::after {
          content: "";
          position: absolute;
-         width: 700px;
+         width: 705px;
          height: 12px;
          background-color: $orange;
          bottom: -12px;
-         right: 14px;
+         right: 9px;
       }
       &.free-quote__inner {
          background-color: transparent;
@@ -308,7 +304,7 @@
       min-height: 787px;
       background-color: transparent;
    }
-   &__title {
+   &__form-title {
       font-size: 33px;
       color: #fff;
       letter-spacing: -1px;
@@ -318,10 +314,41 @@
       margin-bottom: 60px;
    }
 
-   &__form {
+   &__form-content {
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
+      input,
+      textarea,
+      button {
+         background-color: transparent;
+         border: 1px solid #768090;
+         border-radius: 26px;
+         width: 340px;
+         height: 50px;
+         margin-bottom: 18px;
+         padding: 18px;
+         color: #fff;
+         line-height: 30px;
+         border-color: #768090;
+         &:nth-child(odd) {
+            margin-right: 15px;
+         }
+         &::placeholder {
+            color: #fff;
+            line-height: 30px;
+         }
+      }
+      textarea:focus {
+         border-radius: 26px;
+         border: 1px solid transparent;
+      }
+      button {
+         transition: all 0.3s ease;
+         &:hover {
+            transform: scale(1.1);
+         }
+      }
       .jq-selectbox__select {
          height: 50px;
          border: 1px solid #768090;
@@ -345,11 +372,6 @@
          border-right: 5px solid transparent;
          border-left: 5px solid transparent;
          color: #fff;
-         &:hover {
-            border-top: 5px solid #fff;
-            border-right: 5px solid transparent;
-            border-left: 5px solid transparent;
-         }
       }
       .jq-selectbox__trigger {
          border-left: none;
@@ -380,29 +402,19 @@
          transform: scale(0.1);
       }
    }
-   &__form-input,
-   &__form-textarea,
-   &__form-btn {
-      background-color: transparent;
-      border: 1px solid #768090;
-      border-radius: 26px;
-      width: 48.5%;
-      height: 50px;
-      margin-bottom: 18px;
-      padding: 18px;
-      color: #fff;
-      line-height: 30px;
-      border-color: #768090;
-      outline: none;
-      &:nth-child(odd) {
-         margin-right: 17px;
-      }
-      &::placeholder {
-         color: #fff;
-         line-height: 30px;
-      }
+   textarea {
+      resize: none;
+      height: 140px;
+      padding: 10px;
+      width: 100%;
+      margin-bottom: 30px;
    }
-   &__form-btn {
+   label {
+      display: block;
+      color: #fff;
+      margin-bottom: 15px;
+   }
+   button {
       background-color: $orange;
       @include m900;
       color: #fff;
@@ -418,22 +430,6 @@
       &:nth-child(odd) {
          margin-right: 0px;
       }
-      transition: all 0.3s ease;
-      &:hover {
-         transform: scale(1.1);
-      }
-   }
-   &__form-textarea {
-      resize: none;
-      height: 140px;
-      padding: 10px;
-      width: 100%;
-      margin-bottom: 30px;
-   }
-   label {
-      display: block;
-      color: #fff;
-      margin-bottom: 15px;
    }
 }
 .jq-selectbox .jqselect {
@@ -445,20 +441,12 @@
 .numbers {
    padding: 125px 0 180px;
    position: relative;
-   // &__line{
-   //    position: absolute;
-   //    border: 1px solid $orange;
-   //    width: 100%;
-   //    top: 55%;
-      
-   // }
-   &::before {
-      content: "";
+   &__line {
+      border: 1px solid $orange;
       width: 100%;
-      height: 1px;
-      background-color: $orange;
       position: absolute;
-      top: 55%;
+      top: 394px;
+      z-index: -1;
    }
    &__title {
       margin-bottom: 95px;
@@ -475,7 +463,6 @@
       justify-content: space-between;
    }
    &__item {
-      position: relative;
       text-align: center;
       padding: 0px 35px;
       background-color: #fff;
@@ -539,13 +526,6 @@
       }
    }
 }
-.flip-clock-divider .flip-clock-label {
-   color: #fff;
-}
-.flip-clock-divider.seconds .flip-clock-label {
-   right: -113px;
-   color: #fff;
-}
 .clock {
    margin: 0 auto;
    max-width: 800px;
@@ -584,7 +564,7 @@
          &::after {
             content: "";
             position: absolute;
-            background-image: url("../images/content/arrow-right.png");
+            background-image: url(../images/content/arrow-right.png);
             width: 133px;
             height: 20px;
             top: 50px;
@@ -617,7 +597,7 @@
       &::after {
          content: "";
          position: absolute;
-         background-image: url("../images/content/arrow-left.png");
+         background-image: url(../images/content/arrow-left.png);
          width: 748px;
          height: 99px;
          top: 80px;
@@ -815,38 +795,41 @@
    form {
       position: relative;
       width: 700px;
+      .form-name {
+         width: 100%;
+      }
+      .form-text {
+         width: 100%;
+         height: 140px;
+         padding-top: 8px;
+         border-radius: 23px;
+         resize: none;
+      }
+      .form-contact {
+         & + .form-contact {
+            margin-left: 15px;
+         }
+      }
    }
-   &__form-input,
-   &__form-textarea {
+   input,
+   textarea {
       background-color: transparent;
       border: 1px solid rgba(#fff, 0.4);
       border-radius: 23px;
       height: 50px;
       margin-bottom: 20px;
-      width: 100%;
+      width: 340px;
       color: #fff;
       padding: 0px 20px;
       @include m700;
-      outline: none;
+
       &::placeholder {
          color: #fff;
          line-height: 30px;
          @include m400;
       }
    }
-   &__form-input:nth-child(2),
-   &__form-input:nth-child(3) {
-      width: 49%;
-   }
-   &__form-input:nth-child(2) {
-      margin-right: 10px;
-   }
-   &__form-textarea {
-      min-height: 140px;
-      resize: none;
-      padding: 20px 20px;
-   }
-   &__form-btn {
+   button {
       position: absolute;
       right: 0;
       bottom: -45px;
@@ -994,5 +977,567 @@
    }
 }
 //end footer
+
+/* Get the bourbon mixin from http://bourbon.io */
+/* Reset */
+.flip-clock-wrapper * {
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   -ms-box-sizing: border-box;
+   -o-box-sizing: border-box;
+   box-sizing: border-box;
+   -webkit-backface-visibility: hidden;
+   -moz-backface-visibility: hidden;
+   -ms-backface-visibility: hidden;
+   -o-backface-visibility: hidden;
+   backface-visibility: hidden;
+}
+
+.flip-clock-wrapper a {
+   cursor: pointer;
+   text-decoration: none;
+   color: #ccc;
+}
+
+.flip-clock-wrapper a:hover {
+   color: #fff;
+}
+
+.flip-clock-wrapper ul {
+   list-style: none;
+}
+
+.flip-clock-wrapper.clearfix:before,
+.flip-clock-wrapper.clearfix:after {
+   content: " ";
+   display: table;
+}
+
+.flip-clock-wrapper.clearfix:after {
+   clear: both;
+}
+
+.flip-clock-wrapper.clearfix {
+   *zoom: 1;
+}
+
+/* Main */
+.flip-clock-wrapper {
+   font: normal 11px "Helvetica Neue", Helvetica, sans-serif;
+   -webkit-user-select: none;
+}
+
+.flip-clock-meridium {
+   background: none !important;
+   box-shadow: 0 0 0 !important;
+   font-size: 36px !important;
+}
+
+.flip-clock-meridium a {
+   color: #313333;
+}
+
+.flip-clock-wrapper {
+   text-align: center;
+   position: relative;
+   width: 100%;
+   margin: 0 auto;
+}
+
+.flip-clock-wrapper:before,
+.flip-clock-wrapper:after {
+   content: " "; /* 1 */
+   display: table; /* 2 */
+}
+.flip-clock-wrapper:after {
+   clear: both;
+}
+
+/* Skeleton */
+.flip-clock-wrapper ul {
+   position: relative;
+   float: left;
+   margin: 0px;
+   width: 75px;
+   height: 90px;
+   font-size: 80px;
+   font-weight: bold;
+   line-height: 87px;
+   border-radius: 0px;
+   background: #000;
+   margin-top: 30px;
+}
+.flip-clock-wrapper ul li {
+   z-index: 1;
+   position: absolute;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   line-height: 87px;
+   text-decoration: none !important;
+}
+
+.flip-clock-wrapper ul li:first-child {
+   z-index: 2;
+}
+
+.flip-clock-wrapper ul li a {
+   display: block;
+   height: 100%;
+   -webkit-perspective: 200px;
+   -moz-perspective: 200px;
+   perspective: 200px;
+   margin: 0 !important;
+   overflow: visible !important;
+   cursor: default !important;
+}
+
+.flip-clock-wrapper ul li a div {
+   z-index: 1;
+   position: absolute;
+   left: 0;
+   width: 100%;
+   height: 50%;
+   font-size: 80px;
+   overflow: hidden;
+   outline: 1px solid transparent;
+}
+
+.flip-clock-wrapper ul li a div .shadow {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   z-index: 2;
+}
+
+.flip-clock-wrapper ul li a div.up {
+   -webkit-transform-origin: 50% 100%;
+   -moz-transform-origin: 50% 100%;
+   -ms-transform-origin: 50% 100%;
+   -o-transform-origin: 50% 100%;
+   transform-origin: 50% 100%;
+   top: 0;
+}
+
+.flip-clock-wrapper ul li a div.up:after {
+   content: "";
+   position: absolute;
+   top: 44px;
+   left: 0;
+   z-index: 5;
+   width: 100%;
+   height: 3px;
+   background-color: #000;
+   background-color: rgba(0, 0, 0, 0.4);
+}
+
+.flip-clock-wrapper ul li a div.down {
+   -webkit-transform-origin: 50% 0;
+   -moz-transform-origin: 50% 0;
+   -ms-transform-origin: 50% 0;
+   -o-transform-origin: 50% 0;
+   transform-origin: 50% 0;
+   bottom: 0;
+   border-bottom-left-radius: 0px;
+   border-bottom-right-radius: 0px;
+}
+
+.flip-clock-wrapper ul li a div div.inn {
+   position: absolute;
+   left: 0;
+   z-index: 1;
+   width: 100%;
+   height: 200%;
+   color: #ccc;
+   text-shadow: 0 1px 2px #000;
+   text-align: center;
+   background-color: #19191a;
+   border-radius: 0px;
+   font-size: 80px;
+}
+
+.flip-clock-wrapper ul li a div.up div.inn {
+   top: 0;
+}
+
+.flip-clock-wrapper ul li a div.down div.inn {
+   bottom: 0;
+}
+
+/* PLAY */
+.flip-clock-wrapper ul.play li.flip-clock-before {
+   z-index: 3;
+}
+
+.flip-clock-wrapper .flip {
+   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
+}
+
+.flip-clock-wrapper ul.play li.flip-clock-active {
+   -webkit-animation: asd 0.5s 0.5s linear both;
+   -moz-animation: asd 0.5s 0.5s linear both;
+   animation: asd 0.5s 0.5s linear both;
+   z-index: 5;
+}
+
+.flip-clock-divider {
+   float: left;
+   display: block;
+   position: relative;
+   width: 50px;
+   height: 100px;
+   background-color: transparent;
+}
+
+.flip-clock-divider:first-child {
+   width: 0;
+}
+
+.flip-clock-dot {
+   display: none;
+   background: #323434;
+   width: 10px;
+   height: 10px;
+   position: absolute;
+   border-radius: 50%;
+   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+   left: 5px;
+}
+
+.flip-clock-divider .flip-clock-label {
+   position: absolute;
+   top: -1.5em;
+   right: -100px;
+   color: #fff;
+   text-shadow: none;
+}
+
+.flip-clock-label {
+   font-size: 16px;
+}
+.flip-clock-divider.minutes .flip-clock-label {
+   right: -108px;
+}
+
+.flip-clock-divider.seconds .flip-clock-label {
+   right: -113px;
+}
+
+.flip-clock-dot.top {
+   top: 30px;
+}
+
+.flip-clock-dot.bottom {
+   bottom: 30px;
+}
+
+@-webkit-keyframes asd {
+   0% {
+      z-index: 2;
+   }
+
+   20% {
+      z-index: 4;
+   }
+
+   100% {
+      z-index: 4;
+   }
+}
+
+@-moz-keyframes asd {
+   0% {
+      z-index: 2;
+   }
+
+   20% {
+      z-index: 4;
+   }
+
+   100% {
+      z-index: 4;
+   }
+}
+
+@-o-keyframes asd {
+   0% {
+      z-index: 2;
+   }
+
+   20% {
+      z-index: 4;
+   }
+
+   100% {
+      z-index: 4;
+   }
+}
+
+@keyframes asd {
+   0% {
+      z-index: 2;
+   }
+
+   20% {
+      z-index: 4;
+   }
+
+   100% {
+      z-index: 4;
+   }
+}
+
+.flip-clock-wrapper ul.play li.flip-clock-active .down {
+   z-index: 2;
+   -webkit-animation: turn 0.5s 0.5s linear both;
+   -moz-animation: turn 0.5s 0.5s linear both;
+   animation: turn 0.5s 0.5s linear both;
+}
+
+@-webkit-keyframes turn {
+   0% {
+      -webkit-transform: rotateX(90deg);
+   }
+
+   100% {
+      -webkit-transform: rotateX(0deg);
+   }
+}
+
+@-moz-keyframes turn {
+   0% {
+      -moz-transform: rotateX(90deg);
+   }
+
+   100% {
+      -moz-transform: rotateX(0deg);
+   }
+}
+
+@-o-keyframes turn {
+   0% {
+      -o-transform: rotateX(90deg);
+   }
+
+   100% {
+      -o-transform: rotateX(0deg);
+   }
+}
+
+@keyframes turn {
+   0% {
+      transform: rotateX(90deg);
+   }
+
+   100% {
+      transform: rotateX(0deg);
+   }
+}
+
+.flip-clock-wrapper ul.play li.flip-clock-before .up {
+   z-index: 2;
+   -webkit-animation: turn2 0.5s linear both;
+   -moz-animation: turn2 0.5s linear both;
+   animation: turn2 0.5s linear both;
+}
+
+@-webkit-keyframes turn2 {
+   0% {
+      -webkit-transform: rotateX(0deg);
+   }
+
+   100% {
+      -webkit-transform: rotateX(-90deg);
+   }
+}
+
+@-moz-keyframes turn2 {
+   0% {
+      -moz-transform: rotateX(0deg);
+   }
+
+   100% {
+      -moz-transform: rotateX(-90deg);
+   }
+}
+
+@-o-keyframes turn2 {
+   0% {
+      -o-transform: rotateX(0deg);
+   }
+
+   100% {
+      -o-transform: rotateX(-90deg);
+   }
+}
+
+@keyframes turn2 {
+   0% {
+      transform: rotateX(0deg);
+   }
+
+   100% {
+      transform: rotateX(-90deg);
+   }
+}
+
+.flip-clock-wrapper ul li.flip-clock-active {
+   z-index: 3;
+}
+
+/* SHADOW */
+.flip-clock-wrapper ul.play li.flip-clock-before .up .shadow {
+   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      color-stop(0%, rgba(0, 0, 0, 0.1)),
+      color-stop(100%, black)
+   );
+   background: linear, top, rgba(0, 0, 0, 0.1) 0%, black 100%;
+   background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: linear, to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%;
+   -webkit-animation: show 0.5s linear both;
+   -moz-animation: show 0.5s linear both;
+   animation: show 0.5s linear both;
+}
+
+.flip-clock-wrapper ul.play li.flip-clock-active .up .shadow {
+   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      color-stop(0%, rgba(0, 0, 0, 0.1)),
+      color-stop(100%, black)
+   );
+   background: linear, top, rgba(0, 0, 0, 0.1) 0%, black 100%;
+   background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
+   background: linear, to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%;
+   -webkit-animation: hide 0.5s 0.3s linear both;
+   -moz-animation: hide 0.5s 0.3s linear both;
+   animation: hide 0.5s 0.3s linear both;
+}
+
+/*DOWN*/
+.flip-clock-wrapper ul.play li.flip-clock-before .down .shadow {
+   background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      color-stop(0%, black),
+      color-stop(100%, rgba(0, 0, 0, 0.1))
+   );
+   background: linear, top, black 0%, rgba(0, 0, 0, 0.1) 100%;
+   background: -o-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: -ms-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: linear, to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%;
+   -webkit-animation: show 0.5s linear both;
+   -moz-animation: show 0.5s linear both;
+   animation: show 0.5s linear both;
+}
+
+.flip-clock-wrapper ul.play li.flip-clock-active .down .shadow {
+   background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      color-stop(0%, black),
+      color-stop(100%, rgba(0, 0, 0, 0.1))
+   );
+   background: linear, top, black 0%, rgba(0, 0, 0, 0.1) 100%;
+   background: -o-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: -ms-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
+   background: linear, to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%;
+   -webkit-animation: hide 0.5s 0.3s linear both;
+   -moz-animation: hide 0.5s 0.3s linear both;
+   animation: hide 0.5s 0.2s linear both;
+}
+
+@-webkit-keyframes show {
+   0% {
+      opacity: 0;
+   }
+
+   100% {
+      opacity: 1;
+   }
+}
+
+@-moz-keyframes show {
+   0% {
+      opacity: 0;
+   }
+
+   100% {
+      opacity: 1;
+   }
+}
+
+@-o-keyframes show {
+   0% {
+      opacity: 0;
+   }
+
+   100% {
+      opacity: 1;
+   }
+}
+
+@keyframes show {
+   0% {
+      opacity: 0;
+   }
+
+   100% {
+      opacity: 1;
+   }
+}
+
+@-webkit-keyframes hide {
+   0% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0;
+   }
+}
+
+@-moz-keyframes hide {
+   0% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0;
+   }
+}
+
+@-o-keyframes hide {
+   0% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0;
+   }
+}
+
+@keyframes hide {
+   0% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0;
+   }
+}
 
 @import "media";
